--- a/AdagioApi/appsettings.json
+++ b/AdagioApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AdagioDB;ConnectRetryCount=0;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AdagioDB": "Server=tcp:adagioserver.database.windows.net,1433;Initial Catalog=AdagioDB;Persist Security Info=False;User ID={adagio};Password={4d@g10ybul3r14};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
