- Añadido repositorio y controller de Clases. - Añadidos atributos de ruta.

--- a/Adagio.Data/appsettings.json
+++ b/Adagio.Data/appsettings.json
@@ -6,6 +6,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AdagioDB;ConnectRetryCount=0;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AdagioDB": "Server=tcp:adagioserver.database.windows.net,1433;Initial Catalog=AdagioDB;Persist Security Info=False;User ID={adagio};Password={4d@g10ybul3r14};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "AdagioDB": "Server=tcp:adagio.database.windows.net,1433;Initial Catalog=AdagioDB;Persist Security Info=False;User ID=AdagioServer;Password=4dagio_Server;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
